[gd_scene load_steps=12 format=3 uid="uid://btpqor03vcqio"]

[ext_resource type="Script" path="res://player.gd" id="1_sctvx"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="2_t8gcq"]
[ext_resource type="PackedScene" uid="uid://bq5puth2fsruo" path="res://gun.tscn" id="3_n8v8g"]
[ext_resource type="PackedScene" uid="uid://brpckfi6bu3rc" path="res://scenes/rifle.tscn" id="4_ua5ka"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fgo7d"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mmmpa"]
radius = 45.0444

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktw1y"]
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0w8f"]
bg_color = Color(0.250286, 0.820891, 0.06775, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_utf0c"]
radius = 390.079

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1kkh"]
bg_color = Color(0.253843, 0.253843, 0.253843, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwlt3"]
bg_color = Color(0, 0.785816, 0.855216, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_sctvx")

[node name="HappyBoo" parent="." instance=ExtResource("2_t8gcq")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fgo7d")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Weaons" type="Node2D" parent="."]

[node name="Gun" parent="Weaons" instance=ExtResource("3_n8v8g")]
position = Vector2(0, -18)

[node name="Rifle" parent="Weaons" instance=ExtResource("4_ua5ka")]
process_mode = 4
visible = false

[node name="Hurtbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_mmmpa")
debug_color = Color(0.533349, 0.226331, 0.296508, 0.42)

[node name="PlayerHealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -92.0
offset_top = -123.0
offset_right = 86.0
offset_bottom = -102.0
theme_override_styles/background = SubResource("StyleBoxFlat_ktw1y")
theme_override_styles/fill = SubResource("StyleBoxFlat_c0w8f")
value = 100.0
show_percentage = false

[node name="Killzone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 3

[node name="killzone" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("CircleShape2D_utf0c")
debug_color = Color(0.211765, 1, 0.329412, 0.419608)

[node name="AttackBar" type="ProgressBar" parent="Killzone"]
unique_name_in_owner = true
offset_left = -64.0
offset_top = -138.0
offset_right = 54.0
offset_bottom = -126.0
theme_override_styles/background = SubResource("StyleBoxFlat_a1kkh")
theme_override_styles/fill = SubResource("StyleBoxFlat_kwlt3")
max_value = 8.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="Killzone"]
unique_name_in_owner = true
wait_time = 8.0
autostart = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="Killzone/AttackTimer" to="." method="_on_timer_timeout"]
